# suz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  driver.cpp  dune-project  main.cpp  parser.yy  scanner.ll  suz.opam  test.suz
.devcontainer/: devcontainer.json
include/: driver.hpp
lib/: dune
lib/compilation/: code_generation.ml  code_generation.mli  data_type.ml  dune  full.ml  operators.ml  translation.ml  verification.ml
lib/parsing/: builder.ml  dune  lexer.mll  parser.mly
lib/representation/: dune  verification.ml
lib/structure/: ast.ml  dune  environment.ml  general.ml  lowering.ml  lowering.mli  tsr.ml
lib/syntax/: dune  expression.ml  type_system.ml
runtime/: io.c
src/: algorithm.cpp  codegen.cpp  driver.cpp  main.cpp  parser.yy  scanner.ll  syntax.cpp
src/include/: algorithm.hpp  codegen.hpp  driver.hpp  syntax.hpp
test/: dune
